--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Problemstilling</h4>
-                <p class="mb-0 text-white-50">Halla</p>
+                <p class="mb-0 text-white-50">Halla på deg jon</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
