Fikset video container

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     <div class="container">
 
       <!-- Featured Project Row -->
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-xl-8 col-lg-7">
-          <video width="fill" height="400" muted="muted" autoplay preload loop> <source src="video/sortering_lang_rask.mp4" type="video/mp4"> </video>
+          <video width="100%" height="100%" muted="muted" autoplay preload loop> <source src="video/sortering_lang_rask.mp4" type="video/mp4"> </video>
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
