--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <img class="navbar-brand" src="img/logo-unibottle.png" height="7%" width="7%" href="#page-top" ></img>
+      <!--<img class="navbar-brand" src="img/logo-unibottle.png" height="7%" width="7%" href="#page-top" ></img> -->
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -38,6 +38,9 @@
         <!--  <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">Visjon</a>
           </li>-->
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#page-top">Hjem</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Om oss</a>
           </li>
@@ -53,9 +56,10 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">UniBottle</h1>
+        <!--<img class="navbar-brand" src="img/logo-unibottle.png" height="7%" width="7%" href="#page-top" ></img> -->
+        <!--<h1 class="mx-auto my-0 text-uppercase">UniBottle</h1> -->
         <h2 class="text-white-50 mx-auto mt-2 mb-5"></h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Les mer</a>
+        <a href="#projects" class="btn btn-primary js-scroll-trigger">Les mer</a>
       </div>
     </div>
   </header>
@@ -79,25 +83,25 @@
     <div class="container">
 
       <!-- Featured Project Row -->
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-xl-8 col-lg-7">
-          <video width="fill" height="400" muted="muted" autoplay preload loop> <source src="video/sortering_lang_rask.mp4" type="video/mp4"> </video>
+          <video width="100%" height="100%" muted="muted" autoplay preload loop> <source src="video/sortering_lang_rask.mp4" type="video/mp4"> </video>
         </div>
         <div class="col-xl-4 col-lg-5">
-          <div class="featured-text text-center text-lg-left">
+          <div class="featured-text text-center text-lg-right">
             <h4>Store maskiner, men små steg.</h4>
             <p class="text-black-50 mb-0">Mangler tekst...</p>
           </div>
         </div>
       </div>
-
+    </br>
       <!-- Project One Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+      <div class="row justify-content-left no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/soppelBotte.jpg" alt="">
         </div>
         <div class="col-lg-6">
-          <div class="bg-black text-center h-100 project">
+          <div class="bg-black text-left h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Problemstilling</h4>
