--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+
     <div class="container">
-      <!--<img class="navbar-brand" src="img/logo-unibottle.png" height="7%" width="7%" href="#page-top" ></img> -->
+
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
         <i class="fas fa-bars"></i>
+
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
+        <img class="navbar-shrink" src="img/liten_tekst.png" height="0%" width="10%" href="#page-top" ></img>
+
         <ul class="navbar-nav ml-auto">
         <!--  <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">Visjon</a>
@@ -56,8 +59,7 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <!--<img class="navbar-brand" src="img/logo-unibottle.png" height="7%" width="7%" href="#page-top" ></img> -->
-        <!--<h1 class="mx-auto my-0 text-uppercase">UniBottle</h1> -->
+        <h1 class="mx-auto my-0 text-uppercase">UniBottle</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5"></h2>
         <a href="#projects" class="btn btn-primary js-scroll-trigger">Les mer</a>
       </div>
@@ -84,9 +86,7 @@
 
       <!-- Featured Project Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-xl-8 col-lg-7">
           <video width="100%" height="100%" muted="muted" autoplay preload loop> <source src="video/sortering_lang_rask.mp4" type="video/mp4"> </video>
-        </div>
       </div>
     </br>
       <!-- Project One Row -->
@@ -161,7 +161,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </section>
 
@@ -255,7 +254,6 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
