--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
           <div class="bg-black text-left h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Problemstilling</h4>
-                <p class="mb-0 text-white-50">Mangler tekst...</p>
+                <h4 class="text-white">Ide</h4>
+                <p class="mb-0 text-white-50">Ideen oppstod under eksamensperioden hvor vi oppdaget at det ble kastet ekstremt mange flasker og bokser i restavfallet på handelshøyskolen BI. Ved videre research fant vi ut at i Norge blir rundt 125 millioner enheter kastet i restavfallet hvert år. Vi så på dette som en utfordring og ville derfor finne en løsning på å redusere mengden enheter som havnet i restavfallet. </p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -111,14 +111,14 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+          <img class="img-fluid" src="img/demo-image-111.jpg" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Prototyper</h4>
-                <p class="mb-0 text-white-50">Mangler tekst...</p>
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">Fra ide til produkt</h4>
+                <p class="mb-0 text-white-50">Dagen etter ideen oppstod bestmte vi oss for å lage to oppsamlingskasser for pant. Så plassere de på to grupperom på BI, for å sjekke om de ville bli benyttet. Men dette ble stoppet ganske raskt av en vekter som ikke ga oss tillatelse til dette. Vi tok derfor kontakt med ledelsen for å høre om det var mulig å putte to oppbevaringsenheter på grupperommene for å teste over en ukes tid, men det fikk vi absolutt ikke lov til. Det var snart sommerferie, så jeg bestemte meg for å prøve igjen til høsten.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -129,15 +129,35 @@
       <!-- Project Three Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg"  alt="">
+          <img class="img-fluid" src="img/demo-image-01.jpg"  alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Løsning</h4>
-                <p class="mb-0 text-white-50">Mangler tekst...</p>
+                <h4 class="text-white">Oppdaget et nytt behov</h4>
+                <p class="mb-0 text-white-50">Høsten kom og det var fadderuke. Under fadderuken hadde Henrik vorspiel, da benyttet han seg av oppbevaringsenhetene. Det funket veldig bra og folk lurte på hvor han hadde kjøpt de. Det gjorde at vi begynte å tenke litt annerledes og gjorde research på nett etter oppbevaringsenheter av pant til privatehusholdninger. Det viste seg at det fantes svært lite. Vi bestemte oss defor å lage våre egne for å selge til privatpersoner. Første oppbevaringenhet fikk vi solgt før vi fikk tatt de med fra vareutleveringen. Gummi viste seg å være mer vrient å få tak i… Men etter å ha kjørt litt rundt til diverse fagfolk fant vi en produsent av gummi.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project Two Row -->
+      <div class="row justify-content-center no-gutters">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+        </div>
+        <div class="col-lg-6 order-lg-first">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">Hva vi tenker å tilby</h4>
+                <p class="mb-0 text-white-50">Ved bruk av oppbevaringsenhtene fant vi ettervert ut at det var tungvint å pante i butikken. Slik oppstod ideen om å ikke bare tilby oppbevaringsenheter, men også tilby en tjeneste for henting av pant. Vi tok kontkat med Infinitum og fikk til et møte for å høre om dette var mulig. Etter et hyggelig møte fikk vi beksjed om at dette var mulig.
+For øyeblkket er vi i en test fase, for å teste div. løsninger for å finne ut av hva som vil være den beste løsningen for deg som kunde. Vi tester ut tjenesten først og fremst på leilighetskomplekser og borettslag i starten i Oslo.
+</p>
+                <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
           </div>
@@ -156,8 +176,11 @@
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Hvordan ønsker vi å løse problemet?</h4>
-            <p class="text-black-50 mb-0">Mangler tekst...</p>
+            <h4>Vår visjon av den ferdige løsningen</h4>
+            <p class="text-black-50 mb-0">Har du noen sprøsmål eller tilbakemeldinger
+              er det bare å ta kontakt.
+            </p>
+
           </div>
         </div>
       </div>
