--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>UniBottle.no</title>
+  <title>U N I B O T T L E</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -118,7 +118,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Fra ide til produkt</h4>
-                <p class="mb-0 text-white-50">Dagen etter ideen oppstod bestmte vi oss for å lage to oppsamlingskasser for pant. Så plassere de på to grupperom på BI, for å sjekke om de ville bli benyttet. Men dette ble stoppet ganske raskt av en vekter som ikke ga oss tillatelse til dette. Vi tok derfor kontakt med ledelsen for å høre om det var mulig å putte to oppbevaringsenheter på grupperommene for å teste over en ukes tid, men det fikk vi absolutt ikke lov til. Det var snart sommerferie, så jeg bestemte meg for å prøve igjen til høsten.</p>
+                <p class="mb-0 text-white-50">Dagen etter ideen oppstod bestmte vi oss for å lage to oppsamlingskasser for pant. Så plassere de på to grupperom på BI, for å sjekke om de ville bli benyttet. Men dette ble stoppet ganske raskt av en vekter som ikke ga oss tillatelse til dette. Vi tok derfor kontakt med ledelsen for å høre om det var mulig å putte to oppbevaringsenheter på grupperommene for å teste over en ukes tid, men det fikk vi absolutt ikke lov til. Det var snart sommerferie, så vi bestemte oss for å heller prøve igjen til høsten.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -136,7 +136,10 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Oppdaget et nytt behov</h4>
-                <p class="mb-0 text-white-50">Høsten kom og det var fadderuke. Under fadderuken hadde Henrik vorspiel, da benyttet han seg av oppbevaringsenhetene. Det funket veldig bra og folk lurte på hvor han hadde kjøpt de. Det gjorde at vi begynte å tenke litt annerledes og gjorde research på nett etter oppbevaringsenheter av pant til privatehusholdninger. Det viste seg at det fantes svært lite. Vi bestemte oss defor å lage våre egne for å selge til privatpersoner. Første oppbevaringenhet fikk vi solgt før vi fikk tatt de med fra vareutleveringen. Gummi viste seg å være mer vrient å få tak i… Men etter å ha kjørt litt rundt til diverse fagfolk fant vi en produsent av gummi.</p>
+                <p class="mb-0 text-white-50">Høsten kom og det var fadderuke. Under fadderuken hadde Henrik vorspiel, da benyttet han seg av oppbevaringsenhetene. De funket veldig bra og folk lurte på hvor de var kjøpt.
+                </p>
+  <p class="mb-0 text-white-50">Det gjorde at vi begynte å tenke litt annerledes og gjorde research på nett etter oppbevaringsenheter av pant til privatehusholdninger. Det viste seg at det fantes svært lite på markedet. Vi bestemte oss defor å fortsette lage våre egne enheter for å selge til privatpersoner. Første oppbevaringenhet fikk vi solgt før vi i det hele tatt, fikk tatt de med fra vareutleveringen. Gummi viste seg å være mer vrient å få tak i… Men etter å ha kjørt litt rundt til diverse fagfolk fant vi en produsent av gummi.
+</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -155,7 +158,9 @@
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Hva vi tenker å tilby</h4>
                 <p class="mb-0 text-white-50">Ved bruk av oppbevaringsenhtene fant vi ettervert ut at det var tungvint å pante i butikken. Slik oppstod ideen om å ikke bare tilby oppbevaringsenheter, men også tilby en tjeneste for henting av pant. Vi tok kontkat med Infinitum og fikk til et møte for å høre om dette var mulig. Etter et hyggelig møte fikk vi beksjed om at dette var mulig.
-For øyeblkket er vi i en test fase, for å teste div. løsninger for å finne ut av hva som vil være den beste løsningen for deg som kunde. Vi tester ut tjenesten først og fremst på leilighetskomplekser og borettslag i starten i Oslo.
+                </p>
+              </br>
+  <p class="mb-0 text-white-50">For øyeblkket er vi i en test fase, for å teste div. løsninger for å finne ut av hva som vil være den beste løsningen for deg som kunde. Vi tester ut tjenesten først og fremst på leilighetskomplekser og borettslag i starten i Oslo.
 </p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
